<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_myproducts"
            android:icon="@drawable/ic_shopping"
            android:title="@string/my_products" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_exit"
            android:title="@string/close" />
    </group>
</menu>